# OpenReflectivity

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/glad/: glad.h
src/: archive_file.cpp  decoder.cpp  decoder.hpp  glad.c  lvltwodef.hpp  main.cpp
test/: decoder_test.cpp
test/archives/: KDIX20240517_025206_V06
test/bzip2archives/: KDIX20240517_025206_V06.bz2  KDIX20240517_025206_V06.prep  prep.sh
